--- a/index.html
+++ b/index.html
@@ -13,209 +13,16 @@
         <a class="lay-avator">
           <img src="ava.jpg">
         </a>
-        <textarea placeholder="写下你的评论..."></textarea>
-        <div class="lay-submit">
-          <a href="#" class="lay-commentBtn">评论</a>
-          <a href="#" class="lay-cancel">取消</a>
+        <textarea placeholder="写下你的评论..." onclick="writeComment()" id="commonTextarea"></textarea>
+        <div class="lay-submit" id="commonSubmit">
+          <a href="javascript:;" class="lay-commentBtn" onclick="writeInt()">评论</a>
+          <a href="#" class="lay-cancel" onclick="cancelComment()">取消</a>
         </div>
       </div>
-      <div class="lay-content">
-        <div class="lay-title">
-          <h3>5条评论</h3>
-        </div>
-        <div class="lay-comment">
-          <div class="lay-personInfo">
-            <a href="#" class="lay-person-avator">
-              <img src="ava.jpg" alt="">
-            </a>
-            <div class="lay-comment-name">
-              <h3 class="lay-comment-title">
-                百里苏烨
-              </h3>
-              <p>5楼 · 2018.09.10 17:29</p>
-            </div>
-          </div>
-          <div class="lay-comment-content">
-            <p>为何2017年04月的旧文可以出现在2018年09月的简书首页上？穿越了？</p>
-            <div class="lay-ztool">
-              <a href="javascript:;">
-                <i class="iconfont icon-dianzan1"></i>
-                <span>赞</span>
-              </a>
-              <a href="javascript:;">
-                <i class="iconfont icon-icon_reply"></i>
-                <span>回复</span>
-              </a>
-            </div>
-            <div class="lay-zreply">
-              <textarea placeholder="回复百里苏烨" rows="5"></textarea>
-              <div class="lay-submit">
-                <a href="#" class="lay-commentBtn">评论</a>
-                <a href="#" class="lay-cancel">取消</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="lay-comment">
-          <div class="lay-personInfo">
-            <a href="#" class="lay-person-avator">
-              <img src="ava.jpg" alt="">
-            </a>
-            <div class="lay-comment-name">
-              <h3 class="lay-comment-title">
-                百里苏烨
-              </h3>
-              <p>5楼 · 2018.09.10 17:29</p>
-            </div>
-          </div>
-          <div class="lay-comment-content">
-            <p>为何2017年04月的旧文可以出现在2018年09月的简书首页上？穿越了？</p>
-            <div class="lay-ztool">
-              <a href="javascript:;">
-                <i class="iconfont icon-dianzan1"></i>
-                <span>赞</span>
-              </a>
-              <a href="javascript:;">
-                <i class="iconfont icon-icon_reply"></i>
-                <span>回复</span>
-              </a>
-            </div>
-            <ul class="lay-zrelist">
-              <li>
-                <h5>迷途的时一：@百里苏烨 我也想知道</h5>
-                <p>
-                  <span>2018.09.27 16:00 </span>
-                  <a href="javascript:;">
-                    <i class="iconfont icon-icon_reply"></i>
-                    <span>回复</span>
-                  </a></p>
-              </li>
-              <li>
-                <h5>迷途的时一：@百里苏烨 我也想知道我也想知道我也想知道我也想知道我也想知道我也想知道我也想知道我也想知道</h5>
-                <p>
-                  <span>2018.09.27 16:00 </span>
-                  <a href="javascript:;">
-                    <i class="iconfont icon-icon_reply"></i>
-                    <span>回复</span>
-                  </a></p>
-              </li>
-              <li>
-                <h5>迷途的时一：@百里苏烨 我也想知道</h5>
-                <p>
-                  <span>2018.09.27 16:00 </span>
-                  <a href="javascript:;">
-                    <i class="iconfont icon-icon_reply"></i>
-                    <span>回复</span>
-                  </a></p>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="lay-comment">
-          <div class="lay-personInfo">
-            <a href="#" class="lay-person-avator">
-              <img src="ava.jpg" alt="">
-            </a>
-            <div class="lay-comment-name">
-              <h3 class="lay-comment-title">
-                百里苏烨
-              </h3>
-              <p>5楼 · 2018.09.10 17:29</p>
-            </div>
-          </div>
-          <div class="lay-comment-content">
-            <p>为何2017年04月的旧文可以出现在2018年09月的简书首页上？穿越了？</p>
-            <div class="lay-ztool">
-              <a href="javascript:;">
-                <i class="iconfont icon-dianzan1"></i>
-                <span>赞</span>
-              </a>
-              <a href="javascript:;">
-                <i class="iconfont icon-icon_reply"></i>
-                <span>回复</span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="lay-comment">
-          <div class="lay-personInfo">
-            <a href="#" class="lay-person-avator">
-              <img src="ava.jpg" alt="">
-            </a>
-            <div class="lay-comment-name">
-              <h3 class="lay-comment-title">
-                百里苏烨
-              </h3>
-              <p>5楼 · 2018.09.10 17:29</p>
-            </div>
-          </div>
-          <div class="lay-comment-content">
-            <p>为何2017年04月的旧文可以出现在2018年09月的简书首页上？穿越了？</p>
-            <div class="lay-ztool">
-              <a href="javascript:;">
-                <i class="iconfont icon-dianzan1"></i>
-                <span>赞</span>
-              </a>
-              <a href="javascript:;">
-                <i class="iconfont icon-icon_reply"></i>
-                <span>回复</span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="lay-comment">
-          <div class="lay-personInfo">
-            <a href="#" class="lay-person-avator">
-              <img src="ava.jpg" alt="">
-            </a>
-            <div class="lay-comment-name">
-              <h3 class="lay-comment-title">
-                百里苏烨
-              </h3>
-              <p>5楼 · 2018.09.10 17:29</p>
-            </div>
-          </div>
-          <div class="lay-comment-content">
-            <p>为何2017年04月的旧文可以出现在2018年09月的简书首页上？穿越了？</p>
-            <div class="lay-ztool">
-              <a href="javascript:;">
-                <i class="iconfont icon-dianzan1"></i>
-                <span>赞</span>
-              </a>
-              <a href="javascript:;">
-                <i class="iconfont icon-icon_reply"></i>
-                <span>回复</span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="lay-comment">
-          <div class="lay-personInfo">
-            <a href="#" class="lay-person-avator">
-              <img src="ava.jpg" alt="">
-            </a>
-            <div class="lay-comment-name">
-              <h3 class="lay-comment-title">
-                百里苏烨
-              </h3>
-              <p>5楼 · 2018.09.10 17:29</p>
-            </div>
-          </div>
-          <div class="lay-comment-content">
-            <p>为何2017年04月的旧文可以出现在2018年09月的简书首页上？穿越了？</p>
-            <div class="lay-ztool">
-              <a href="javascript:;">
-                <i class="iconfont icon-dianzan1"></i>
-                <span>赞</span>
-              </a>
-              <a href="javascript:;">
-                <i class="iconfont icon-icon_reply"></i>
-                <span>回复</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="lay-content"></div>
     </div>
   </body>
 </html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="js/util.js"></script>
+<script src="js/main.js"></script>
